--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -23,7 +23,11 @@
 <div class="d-flex m-3">
   <% @cocktails.each do |cocktail| %>
     <div class="card m-3" style="width: 18rem;">
-      <img class="card-img-top" src="https://source.unsplash.com/collection/96656859/1600x900" alt="Card image cap">
+      <% if cocktail.image.attached? %>
+        <%= cl_image_tag cocktail.image.key, crop: :fill %>
+      <% else %>
+        <%= image_tag 'cocktails_1.jpeg', crop: :fill %>
+      <% end %>
       <div class="card-body">
         <h5 class="card-title"><%= cocktail.name %></h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
