--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -19,6 +19,7 @@
 <div class="container m-3">
   <%= simple_form_for(@cocktail) do |f| %>
     <%= f.input :name %>
+    <%= f.input :image, as: :file %>
     <%= f.submit "Create Cocktail", class: "btn btn-primary" %>
   <% end %>
 </div>
