--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -31,5 +31,9 @@
       <%= render "doses/new", cocktail: @cocktail, dose: @dose %>
     </div>
   </div>
-  <img src="https://source.unsplash.com/collection/96656859/1600x900" style="width: 32rem;">
+  <% if @cocktail.image.attached? %>
+    <%= cl_image_tag @cocktail.image.key, crop: :fill %>
+  <% else %>
+    <%= image_tag 'cocktails_2.jpg', crop: :fill %>
+  <% end %>
 </div>
