--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,3 +2,34 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+
+.card-img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 8px 8px 0px 0px;
+}
+
+.large_img {
+  width: 600px;
+  height: 600px;
+  object-fit: cover;
+   border-radius: 0px 8px 8px 0px;
+}
+
+body {
+  background-color: #F4EBE8;
+}
+
+
+h1 {
+  margin: 32px;
+}
+
+#small_card {
+  border-radius: 8px;
+}
+
+#large_card {
+  border-radius: 8px 0px 0px 8px;
+}
