--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -16,6 +16,8 @@
   </div>
 </nav>
 
+<h1>New Cocktail</h1>
+
 <div class="container m-3">
   <%= simple_form_for(@cocktail) do |f| %>
     <%= f.input :name %>
