--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -17,10 +17,9 @@
 </nav>
 
 <div class="d-flex justify-content-center m-3">
-  <div class="card" style="width: 32rem;">
+  <div id="large_card" class="card" style="width: 32rem;">
     <div class="card-body">
-      <h5 class="card-title"><%= @cocktail.name %></h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <h2 class="card-title"><%= @cocktail.name %></h2>
       <h5 class="card-title">Ingredients</h5>
       <ul class="list-group">
         <% @cocktail.doses.each do |dose| %>
@@ -32,8 +31,8 @@
     </div>
   </div>
   <% if @cocktail.image.attached? %>
-    <%= cl_image_tag @cocktail.image.key, crop: :fill %>
+    <%= cl_image_tag @cocktail.image.key, crop: :fill, class: 'large_img' %>
   <% else %>
-    <%= image_tag 'cocktails_2.jpg', crop: :fill %>
+    <%= image_tag 'cocktails_2.jpg', crop: :fill, class: 'large_img' %>
   <% end %>
 </div>
