--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -17,7 +17,7 @@
 </nav>
 
 <div class="d-flex justify-content-center m-3">
-  <div id="large_card" class="card" style="width: 32rem;">
+  <div id="large-card" class="card" style="width: 32rem;">
     <div class="card-body">
       <h2 class="card-title"><%= @cocktail.name %></h2>
       <h5 class="card-title">Ingredients</h5>
@@ -31,8 +31,8 @@
     </div>
   </div>
   <% if @cocktail.image.attached? %>
-    <%= cl_image_tag @cocktail.image.key, crop: :fill, class: 'large_img' %>
+    <%= cl_image_tag @cocktail.image.key, crop: :fill, class: 'large-img' %>
   <% else %>
-    <%= image_tag 'cocktails_2.jpg', crop: :fill, class: 'large_img' %>
+    <%= image_tag 'cocktails_2.jpg', crop: :fill, class: 'large-img' %>
   <% end %>
 </div>
