--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,7 +10,7 @@
   border-radius: 8px 8px 0px 0px;
 }
 
-.large_img {
+.large-img {
   width: 600px;
   height: 600px;
   object-fit: cover;
@@ -26,10 +26,10 @@ h1 {
   margin: 32px;
 }
 
-#small_card {
+#small-card {
   border-radius: 8px;
 }
 
-#large_card {
+#large-card {
   border-radius: 8px 0px 0px 8px;
 }
